--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "css-loader": "^6.10.0",
+    "gh-pages": "^6.1.1",
+    "style-loader": "^3.3.4"
   }
 }
