--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "@types/node": "^16.18.83",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
+    "@types/plotly.js": "^1.54.22",
+    "@types/react-plotly.js": "^2.6.3",
     "normalize.css": "^8.0.1",
+    "plotly.js": "^2.27.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-plotly.js": "^2.6.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
